async-coap-uri/proc-macros/tests/ui/assert_rel_ref_literal/invalid_utf8.stderr
error: invalid utf8
 --> $DIR/invalid_utf8.rs:7:29
  |
7 |     assert_rel_ref_literal!("https://www.example.com/%aa%FF/b/c");
  |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
